PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Dec 2006, PHP 5.2.1RC2
- Added internal heap protection (Dmitry)
  . safe unlinking
  . cookies
  . canary protection (debug build only)
  . random generation of cookies and canaries

14 Dec 2006, PHP 5.2.1RC1
- Added a meta tag to phpinfo() output to prevent search engines from indexing 
  the page. (Ilia)
- Added new function, sys_get_temp_dir(). (Hartmut)
- Added missing object support to file_put_contents(). (Ilia)
- Changed double-to-string utilities to use BSD implementation. (Dmitry, Tony)
- Updated bundled libcURL to version 7.16.0 in the Windows distro. (Edin)
- Updated timezone database to version 2006.16. (Derick)
- cgi.* and fastcgi.* directives are moved to INI subsystem.
  The new directive cgi.check_shebang_line can be used to ommiting checnk
  for "#! /usr/bin/php" line. (Dmitry).
- Windows related optimizations (Dmitry, Stas)
  . COM initialization/deinitialization are done only if necessary
  . removed unnecessary checks for ISREG file and corresponding stat() calls
  . opendir() is reimplemented using GetFistFile/GetNextFile those are faster
    then _findfirst/_findnext
  . implemented registry cache that prevent registry lookup on each request.
    In case of modification of corresponding registry-tree PHP will reload
    it automatic
  . start timeout thread only if necessary
  . stat() is reimplemented using using GetFileAttributesEx().
    The new implementation is faster then implementation in MS VC CRT, but
    it doesn't support Windows 95.
- Streams optimization (Dmitry)
  . removed unnecessary ftell() calls (one call for each included PHP file)
  . disabled calls to read() after EOF
- Optimized array functions utilizing php_splice(). (Ilia)
- VCWD_REALPATH() is improved to use realpath cache without VIRTUAL_DIR.
  (Dmitry)