@@ -1,0 +1,55 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<definitions
+		xmlns:http="http://schemas.xmlsoap.org/wsdl/http/"
+		xmlns:soap="http://schemas.xmlsoap.org/wsdl/soap/"
+		xmlns:s="http://www.w3.org/2001/XMLSchema"
+		xmlns:s0="http://test.pl"
+		targetNamespace="http://test.pl"
+		xmlns="http://schemas.xmlsoap.org/wsdl/">
+	<types>
+		<s:schema elementFormDefault="qualified" targetNamespace="http://test.pl">
+			<s:complexType name="MessageInfoType">
+			   <s:sequence>
+			      <s:element name="NetworkErrorCode" type="s:integer" minOccurs="0"/>
+			   </s:sequence>
+			   <s:attribute name="priority" type="s0:PriorityType"/>
+			</s:complexType>
+			<s:simpleType name="PriorityType">
+				<s:restriction base="s:integer">
+					<s:minInclusive value="0"/>
+					<s:maxInclusive value="3"/>
+			   </s:restriction>
+			</s:simpleType>	
+		</s:schema>
+	</types>
+
+	<message name="TestSoapIn">
+		<part name="parameters" type="s0:MessageInfoType" />
+	</message>
+	<message name="TestSoapOut">
+		<part name="parameters" type="s:string" />
+	</message>
+	<portType name="TestSoap">
+		<operation name="Test">
+			<input message="s0:TestSoapIn"/>
+			<output message="s0:TestSoapOut"/>
+		</operation>
+	</portType>
+	<binding name="TestSoap" type="s0:TestSoap">
+		<soap:binding transport="http://schemas.xmlsoap.org/soap/http" style="document"/>
+		<operation name="Test">
+			<soap:operation soapAction="http:/Test/Test" style="rpc"/>
+			<input>
+				<soap:body use="literal"/>
+			</input>
+			<output>
+				<soap:body use="literal"/>
+			</output>
+		</operation>
+	</binding>
+	<service name="Test">
+		<port name="TestSoapPort" binding="s0:TestSoap">
+			<soap:address location="http://localhost/server.php"/>
+		</port>
+	</service>
+</definitions>
